--- a/public/index.html
+++ b/public/index.html
@@ -248,8 +248,8 @@
 		</div>
 		<footer>
 			<div class="d-flex justify-content-between text-center">
-				<div><cite>Developer:</cite><img src="/public/img/VietLinhSign (1).jpg"alt="VL"></div>
-				<div><cite>Designer:</cite><img src="/public/img/HieuNguyenSign.jpg"alt="BN"></div>
+				<div><cite>Developer:</cite><img src="./img/VietLinhSign.jpg"alt="VL"></div>
+				<div><cite>Designer:</cite><img src="./img/HieuNguyenSign.jpg"alt="BN"></div>
 			</div>
 
 		</footer>
