--- a/public/index.html
+++ b/public/index.html
@@ -108,6 +108,7 @@
 			top: 10px;
 			left: 15px;
 			position: absolute;
+			width: 70%;
 
 		}
 
@@ -201,15 +202,17 @@
 			<div id="wait" class="hide loader"></div>
 			<div id="questionScreen" class="hide">
 				<div id="board">
-					<div id="cash">
+			
+						<div id="cash">
 						<i class="zmdi zmdi-money text-warning"></i>
 						<div id="scored" class="text-warning">abc</div>
-					</div>
-					<div id="indexQuestion" class="text-primary font-weight-bold">a</div>
-					<div id="timeBoard">
-						<i class="zmdi zmdi-timer mr-1 text-success"></i>
-						<span id="time" class="text-danger"></span>
-					</div>
+					     </div>
+					     <div id="indexQuestion" class="text-primary font-weight-bold">a</div>
+					     <div id="timeBoard">
+						   <i class="zmdi zmdi-timer mr-1 text-success"></i>
+						   <span id="time" class="text-danger"></span>
+					     </div>
+
 				</div>
 				<div id='question'>Cau hoi</div>
 				<div id="answer">
