add end sound after answered last question

--- a/public/index.html
+++ b/public/index.html
@@ -281,6 +281,7 @@
 				</div>
 
 			</div>
+			<div id="endScreen" class="hide">End!</div>
 			<div id="lose" class="hide again w-100">
 				<div class="alert alert-light" role="alert">
 					Thật đáng tiếc! Xuôi Thôi<a id="btn2" class="alert-link">Chơi Lại Nha.</a>&#128514;&#128514;&#128514;
