--- a/public/index.html
+++ b/public/index.html
@@ -153,7 +153,7 @@
 		}
 
 	   footer img{
-		   width: 25%;
+		   width: 60%;
 	   }
 
 		/* Safari */
@@ -175,6 +175,23 @@
 			100% {
 				transform: rotate(360deg);
 			}
+		}
+
+		body{
+			background-color: #282c34;
+		}
+
+		.logo {
+    		animation: logo-spin infinite 20s linear;
+  		}
+
+  		@keyframes logo-spin {
+		  from {
+		    transform: rotate(0deg);
+		  }
+		  to {
+		    transform: rotate(360deg);
+		  }
 		}
 	</style>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -247,9 +264,9 @@
 			</div>
 		</div>
 		<footer>
-			<div class="d-flex justify-content-between text-center">
-				<div><cite>Developer:</cite><img src="/public/img/VietLinhSign (1).jpg"alt="VL"></div>
-				<div><cite>Designer:</cite><img src="/public/img/HieuNguyenSign.jpg"alt="BN"></div>
+			<div class="d-flex justify-content-between text-center w-50 m-auto">
+				<div class="ml-5"><cite>Developer:</cite><img src="/public/img/VietLinhSign (1).jpg"alt="VL"></div>
+				<div><cite>Designer:</cite><img src="/public/img/HieuNguyenSign.jpg"alt="HN"></div>
 			</div>
 
 		</footer>
